k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pronunt-ingestion-service
  namespace: pronunt-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pronunt-ingestion-service
  template:
    metadata:
      labels:
        app: pronunt-ingestion-service
    spec:
      containers:
        - name: pronunt-ingestion-service
          image: ghcr.io/pronunt/pronunt-ingestion-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
