k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pronunt-ingestion-service
  namespace: pronunt-app-ns
spec:
  selector:
    app: pronunt-ingestion-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
